logs/myutil.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/myutil'...
Compiling './lib/python3.5/site-packages/myutil/config.py'...
***   File "./lib/python3.5/site-packages/myutil/config.py", line 29
    print 'a' if config.get('email', 'address3') else 'b'
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/myutil/dataframe_util.py'...
***   File "./lib/python3.5/site-packages/myutil/dataframe_util.py", line 117
    print 'save to loc'
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/myutil/date_util.py'...
***   File "./lib/python3.5/site-packages/myutil/date_util.py", line 146
    print 'today : %s' % model.get_today()
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/myutil/log_util.py'...
***   File "./lib/python3.5/site-packages/myutil/log_util.py", line 23
    print '[LOG] ', str(datetime.now())[:19] + ' ', func.__name__, ' start running '
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/myutil-1.0.19.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
